--- a/test.html
+++ b/test.html
@@ -9,5 +9,5 @@
 	<a href="https://google.com" target="_blank" title="Let's go to Google!!!!">Click me! I'm a link!</a>
 	<p>My name is: <br>
 	Kitty Cat</p>
-	<img src="img/turk.jpg">
+	<img src="img/season9.jpg">
 </body>
