--- a/test.html
+++ b/test.html
@@ -8,6 +8,6 @@
 	<p>Hey. I'm a <b>paragraph</b> element. Cool huh?</p>
 	<a href="https://google.com" target="_blank" title="Let's go to Google!!!!">Click me! I'm a link!</a>
 	<p>My name is: <br>
-	Kitty Cat</p>
+	Kitty gurls</p>
 	<img src="img/season9.jpg">
 </body>
